[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/snake/Snake_idle.png" type="Texture" id=1]
[ext_resource path="res://sprites/snake/Snake_attack.png" type="Texture" id=2]
[ext_resource path="res://Snake.gd" type="Script" id=3]
[ext_resource path="res://sprites/snake/Snake_death.png" type="Texture" id=4]
[ext_resource path="res://sprites/snake/Snake_walk.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flippable/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flippable/AttackArea/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10.1082, -3.27031 ), Vector2( -10.1082, -3.27031 ), Vector2( -28.2436, 0.891914 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Flippable/AttackArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 6.27667, 1, 0.0669858, 1, 1 ),
"update": 1,
"values": [ true, true, false, false, true, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flippable/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flippable/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flippable/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.5, 8 )

[sub_resource type="CircleShape2D" id=7]
radius = 4.73287

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21.053, 2.15562 )

[node name="Snake" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/death = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Flippable" type="Node2D" parent="."]

[node name="FrontHoleDetector" type="RayCast2D" parent="Flippable"]
position = Vector2( -14.8651, 0.891914 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="FrontWallDetector" type="RayCast2D" parent="Flippable"]
position = Vector2( -8.02714, -0.297302 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 2

[node name="Sprite" type="Sprite" parent="Flippable"]
position = Vector2( -8.91905, -15.4597 )
texture = ExtResource( 5 )
hframes = 4

[node name="AttackArea" type="Area2D" parent="Flippable"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippable/AttackArea"]
position = Vector2( -10.1082, -3.27031 )
shape = SubResource( 7 )
disabled = true

[node name="DangerZone" type="Area2D" parent="Flippable"]
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Flippable/DangerZone"]
position = Vector2( -27.3517, -7.62939e-06 )
scale = Vector2( 1.28183, 4.11272 )
shape = SubResource( 6 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Flippable/AttackArea" to="." method="_on_AttackArea_body_entered"]
